<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDialogContainer"
  android:background="@color/bar_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
  >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDialog"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dialogTextTitle"
            style="@style/ForecastTodayDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title_success_background"
            android:padding="10dp"
            android:text="@string/location_permission_missing"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/errorDialogIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/error_dialog_icon"
            android:src="@drawable/ic_error"
            app:layout_constraintBottom_toBottomOf="@id/dialogTextTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/dialogTextTitle" />

        <TextView
            android:id="@+id/errorDialogMessage"
            style="@style/ForecastTodayDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="60dp"
            android:text="@string/forecast_is_created_based_on_your_device_location_let_apps_find_your_device_s_location"
                    android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialogTextTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/errorDialogButtonNo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/no"
        android:textColor="@color/white"
        android:background="@drawable/error_dialog_button"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@id/layoutDialog"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/errorDialogButtonYes"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/error_dialog_button"
        app:layout_constraintBottom_toBottomOf="@id/layoutDialog"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>