<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:padding="14dp">

    <TextView
        android:id="@+id/date_details"
        style="@style/ForecastTodayDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/overviewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/detailsContainer"
        app:layout_constraintTop_toBottomOf="@+id/date_details"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/forecast_details"
            style="@style/ForecastTodayDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/icon_details"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_details"
            android:fontFamily="sans-serif-thin"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tempLow_details"
                style="@style/ForecastTodayDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="48sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tempHigh_details"
                style="@style/ForecastTodayDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="48sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    style="@style/ForecastDetailsIcons"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/sunrise_icon"
                    android:src="@drawable/sunrise" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    style="@style/ForecastDetailsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise" />

                <TextView
                    android:id="@+id/sunrise"
                    style="@style/ForecastDetailsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />
            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    style="@style/ForecastDetailsIcons"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/sunset_icon"
                    android:src="@drawable/sunset" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    style="@style/ForecastDetailsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset" />

                <TextView
                    android:id="@+id/sunset"
                    style="@style/ForecastDetailsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />
            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    style="@style/ForecastDetailsIcons"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/wind_icon"
                    android:src="@drawable/wind" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    style="@style/ForecastDetailsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind" />

                <TextView
                    android:id="@+id/wind"
                    style="@style/DetailsForecastTextDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    style="@style/ForecastDetailsIcons"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/pressure_icon"
                    android:src="@drawable/pressure" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    style="@style/ForecastDetailsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure" />

                <TextView
                    android:id="@+id/pressure"
                    style="@style/DetailsForecastTextDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />
            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    style="@style/ForecastDetailsIcons"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/humidity_icon"
                    android:src="@drawable/humidity" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    style="@style/ForecastDetailsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity" />

                <TextView
                    android:id="@+id/humidity"
                    style="@style/DetailsForecastTextDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />
            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    style="@style/ForecastDetailsIcons"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/precipitation_icon"
                    android:src="@drawable/umbrella" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    style="@style/ForecastDetailsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precipitation" />

                <TextView
                    android:id="@+id/precipitation"
                    style="@style/ForecastDetailsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
