<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/units_settings_item"
        layout="@layout/layout_settings_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/celsius_degree_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/celsius_degree_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/degree_celsius"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/slash_separator"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@android:color/darker_gray"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/slash_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/slash"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/fahrenheit_degree_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fahrenheit_degree_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/degree_fahrenheit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@android:color/darker_gray"
        android:textStyle="normal" />


</androidx.constraintlayout.widget.ConstraintLayout>